# live-f1

./: .env.local  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: pipeline.yml
.streamlit/: config.toml
calls/: openf1.py
reporting/: app.py  connection.py  query_registry.py  runner.py
reporting/charts/: fastest_team_chart.py  lap_times_chart.py
reporting/queries/: f1_drivers.sql  f1_laps.sql  f1_race_weekends.sql
tests/integration/calls/: test_openf1_integration.py
tests/unit/: test_connection.py  test_query_registry.py  test_runner.py
tests/unit/calls/: test_openf1.py
tests/unit/utils/: test_requests_wrapper.py
utils/: requests_wrapper.py
