[tool.poetry]
name = "reporting"
version = "0.1.0"
description = ""
authors = ["Tamas Marton <martontam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.42.2"
duckdb = "^1.2.0"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.0"

[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
